# Lambda

./: LICENSE  Lambda.cabal  README.md
docs/: grammar.ebnf
src/: Interpreter.hs  Main.hs  Parser.hs
