cabal-version:      3.0
name:               Lambda
version:            0.1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Alyssa Miles
maintainer:         amiles723@proton.me
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Lambda
    import:           warnings
    main-is:          Main.hs
    other-modules:    Parser, Interpreter
    build-depends:    base ^>=4.18.3.0, containers, text, mtl, exceptions, parsec
    hs-source-dirs:   src
    default-language: Haskell2010
